fix: enable scrollbar inside modals

--- a/src/design-system/Modal/modal.module.scss
+++ b/src/design-system/Modal/modal.module.scss
@@ -1,8 +1,10 @@
 .root {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  bottom: 0;
   min-height: 100vh;
   background-color: var(--color-background-dark);
+  overflow: auto;
 }
